--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -25,6 +25,7 @@
     opacity: 0.8;
     z-index: 1;
     animation: floatUp 5s infinite ease-in-out;
+    overflow-y: hidden;
   
     &::before {
       content: "";
