--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #f5f0e1; // Adjust as needed for your theme
+    background: #f5f0e1; 
     overflow: hidden;
     font-family: 'chewy', 'sans-serif';
   
@@ -13,6 +13,7 @@
       z-index: 2;
       font-size: 4rem;
       color: #333;
+      margin-top: -10rem;
     }
   }
   
