--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -12,6 +12,7 @@ body {
   background-color: #d3d3d3;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding-top: 2rem;
 }
 
 .meetPoohSection {
